Add remaining endpoints boilerplate
