# backend/restapi/operations/create_question_responses.go
@@ -1,0 +1,122 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+)
+
+// CreateQuestionCreatedCode is the HTTP code returned for type CreateQuestionCreated
+const CreateQuestionCreatedCode int = 201
+
+/*CreateQuestionCreated Created
+
+swagger:response createQuestionCreated
+*/
+type CreateQuestionCreated struct {
+}
+
+// NewCreateQuestionCreated creates CreateQuestionCreated with default headers values
+func NewCreateQuestionCreated() *CreateQuestionCreated {
+
+	return &CreateQuestionCreated{}
+}
+
+// WriteResponse to the client
+func (o *CreateQuestionCreated) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(201)
+}
+
+// CreateQuestionBadRequestCode is the HTTP code returned for type CreateQuestionBadRequest
+const CreateQuestionBadRequestCode int = 400
+
+/*CreateQuestionBadRequest Bad Request
+
+swagger:response createQuestionBadRequest
+*/
+type CreateQuestionBadRequest struct {
+}
+
+// NewCreateQuestionBadRequest creates CreateQuestionBadRequest with default headers values
+func NewCreateQuestionBadRequest() *CreateQuestionBadRequest {
+
+	return &CreateQuestionBadRequest{}
+}
+
+// WriteResponse to the client
+func (o *CreateQuestionBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(400)
+}
+
+// CreateQuestionUnauthorizedCode is the HTTP code returned for type CreateQuestionUnauthorized
+const CreateQuestionUnauthorizedCode int = 401
+
+/*CreateQuestionUnauthorized Unauthorized
+
+swagger:response createQuestionUnauthorized
+*/
+type CreateQuestionUnauthorized struct {
+}
+
+// NewCreateQuestionUnauthorized creates CreateQuestionUnauthorized with default headers values
+func NewCreateQuestionUnauthorized() *CreateQuestionUnauthorized {
+
+	return &CreateQuestionUnauthorized{}
+}
+
+// WriteResponse to the client
+func (o *CreateQuestionUnauthorized) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(401)
+}
+
+/*CreateQuestionDefault Unknown error
+
+swagger:response createQuestionDefault
+*/
+type CreateQuestionDefault struct {
+	_statusCode int
+}
+
+// NewCreateQuestionDefault creates CreateQuestionDefault with default headers values
+func NewCreateQuestionDefault(code int) *CreateQuestionDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &CreateQuestionDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the create question default response
+func (o *CreateQuestionDefault) WithStatusCode(code int) *CreateQuestionDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the create question default response
+func (o *CreateQuestionDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WriteResponse to the client
+func (o *CreateQuestionDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(o._statusCode)
+}
