# backend/restapi/operations/get_question_responses.go
@@ -1,0 +1,144 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	models "backend/models"
+)
+
+// GetQuestionOKCode is the HTTP code returned for type GetQuestionOK
+const GetQuestionOKCode int = 200
+
+/*GetQuestionOK OK
+
+swagger:response getQuestionOK
+*/
+type GetQuestionOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Question `json:"body,omitempty"`
+}
+
+// NewGetQuestionOK creates GetQuestionOK with default headers values
+func NewGetQuestionOK() *GetQuestionOK {
+
+	return &GetQuestionOK{}
+}
+
+// WithPayload adds the payload to the get question o k response
+func (o *GetQuestionOK) WithPayload(payload *models.Question) *GetQuestionOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get question o k response
+func (o *GetQuestionOK) SetPayload(payload *models.Question) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetQuestionOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetQuestionUnauthorizedCode is the HTTP code returned for type GetQuestionUnauthorized
+const GetQuestionUnauthorizedCode int = 401
+
+/*GetQuestionUnauthorized Unauthorized
+
+swagger:response getQuestionUnauthorized
+*/
+type GetQuestionUnauthorized struct {
+}
+
+// NewGetQuestionUnauthorized creates GetQuestionUnauthorized with default headers values
+func NewGetQuestionUnauthorized() *GetQuestionUnauthorized {
+
+	return &GetQuestionUnauthorized{}
+}
+
+// WriteResponse to the client
+func (o *GetQuestionUnauthorized) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(401)
+}
+
+// GetQuestionNotFoundCode is the HTTP code returned for type GetQuestionNotFound
+const GetQuestionNotFoundCode int = 404
+
+/*GetQuestionNotFound Not Found
+
+swagger:response getQuestionNotFound
+*/
+type GetQuestionNotFound struct {
+}
+
+// NewGetQuestionNotFound creates GetQuestionNotFound with default headers values
+func NewGetQuestionNotFound() *GetQuestionNotFound {
+
+	return &GetQuestionNotFound{}
+}
+
+// WriteResponse to the client
+func (o *GetQuestionNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(404)
+}
+
+/*GetQuestionDefault Unknown error
+
+swagger:response getQuestionDefault
+*/
+type GetQuestionDefault struct {
+	_statusCode int
+}
+
+// NewGetQuestionDefault creates GetQuestionDefault with default headers values
+func NewGetQuestionDefault(code int) *GetQuestionDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &GetQuestionDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the get question default response
+func (o *GetQuestionDefault) WithStatusCode(code int) *GetQuestionDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the get question default response
+func (o *GetQuestionDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WriteResponse to the client
+func (o *GetQuestionDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(o._statusCode)
+}
