# backend/swagger.yml
@@ -8,7 +8,9 @@ securityDefinitions:
         in: header
         name: Authorization
 consumes:
-- application/json
+    - application/json
+produces:
+    - application/json
 info:
     contact:
         name: Ryan's mom
@@ -53,35 +55,110 @@ definitions:
                 minItems: 8
                 maxItems: 8
 paths:
-    # CONTROLLER
-    /controller/authTest:
+    # API
+    /authTest:
         get:
             summary: Test the authorization code
             operationId: authTest
             security:
                 - ApiKeyAuth: []
-            tags:
-                - controller
+            responses:
+                204:
+                    description: No Content
+                401:
+                    description: Unauthorized
+                default:
+                    description: Unknown error
+    /questions:
+        get:
+            summary: Get all questions
+            operationId: getQuestions
+            security:
+                - ApiKeyAuth: []
             responses:
                 200:
                     description: OK
+                    schema:
+                        type: array
+                        items:
+                            $ref: "#/definitions/question"
                 401:
                     description: Unauthorized
+                default:
+                    description: Unknown error
+        post:
+            summary: Create a new question
+            operationId: createQuestion
+            security:
+                - ApiKeyAuth: []
+            responses:
+                201:
+                    description: Created
+                400:
+                    description: Bad Request
+                401:
+                    description: Unauthorized
+                default:
+                    description: Unknown error
+    /questions/{id}:
+        get:
+            summary: Get a question by ID
+            operationId: getQuestion
+            security:
+                - ApiKeyAuth: []
+            parameters:
+                - name: id
+                  in: path
+                  type: integer
+                  format: int64
+                  required: true
+            responses:
+                200:
+                    description: OK
+                    schema:
+                        $ref: "#/definitions/question"
+                401:
+                    description: Unauthorized
+                404:
+                    description: Not Found
+                default:
+                    description: Unknown error
+    /questions/{questionId}/answers/{answerId}/reveal:
+        post:
+            summary: Marks an answer as revealed
+            operationId: revealAnswer
+            security:
+                - ApiKeyAuth: []
+            parameters:
+                - name: questionId
+                  in: path
+                  type: integer
+                  format: int64
+                  required: true
+                - name: answerId
+                  in: path
+                  type: integer
+                  format: int64
+                  required: true
+            responses:
+                204:
+                    description: OK
+                401:
+                    description: Unauthorized
+                404:
+                    description: Not Found
+                default:
+                    description: Unknown error
+
     # PRESENTER
     /presenter/websocket:
         get:
             summary: Establish a presenter websocket
             operationId: websocket
-            tags:
-                - presenter
             responses:
                 101:
                     description: Switching Protocols
 
-produces:
-- application/json
-schemes:
-- http
 swagger: "2.0"
 
 # e := echo.New()
